--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "XeniaGorbunova",
   "license": "ISC",
   "dependencies": {
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -19,7 +20,11 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
+    "css-loader": "^6.7.2",
     "html-webpack-plugin": "^5.5.0",
+    "sass-loader": "^13.2.0",
+    "scoped-css-loader": "^1.0.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
