--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
+    "eslint": "^8.27.0",
     "html-webpack-plugin": "^5.5.0",
     "sass-loader": "^13.2.0",
     "scoped-css-loader": "^1.0.0",
