--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
