--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "''",
   "main": "index.jsx",
   "scripts": {
-    "dev": "webpack serve",
+    "dev": "webpack serve --mode=development",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
