--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.10.14",
     "@svgr/webpack": "^6.5.1",
     "file-loader": "^6.2.0",
+    "json-server-auth": "^2.1.0",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
